[metadata]
name = sheet_happens
version = attr: sheet_happens.__version__
description = Simple Excel 2007+ to CSV, JSON, and YAML converter without dependencies
long_description = file: README.md
long_description_content_type = text/markdown
author = Nuno André
author_email = mail@nunoand.re
license = MIT
license_files = LICENSE
url = https://github.com/nuno-andre/sheet-happens
project_urls =
    Bug Reports = https://github.com/nuno-andre/sheet-happens/issues
    Source = https://github.com/nuno-andre/sheet-happens
classifiers =
    Development Status :: 5 - Production
    Intended Audience :: Developers
    License :: MIT
    Topic :: Text Processing :: Markup
    Environment :: Console
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
keywords = excel json csv yaml xlsx
platforms = any

[options]
python_requires = >=3.4, <4

[options.entry_points]
console_scripts =
    sheet-happens = sheet_happens:main

[flake8]
ignore = E221  # multiple spaces before operator
